--- a/css/styles.css
+++ b/css/styles.css
@@ -4381,17 +4381,19 @@ img.u-pull-left {
     letter-spacing: -.04em;
     line-height: 1.125
 }
-
-.text-pretitle2.with-line{
-    font-family    : var(--font-1);
-    font-size      : var(--text-md);
-    padding-left : 3rem;
-    transform    : translateX(-3rem);
-    transform    : none;
-    color        : var(--color-1);
-    padding-left : 6rem;
-    transform    : translateX(-6rem);
-    text-transform : uppercase;
-   
-   
+.s-hero__bg {
+    /* display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0; */
+    width: 100%;
+    height: 100%;
+    /* background-image: url(../images/header-bg-300.jpg); */
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    opacity: 50%;
 }
+
